--- a/gre/notes/verbal-reasoning.html
+++ b/gre/notes/verbal-reasoning.html
@@ -213,6 +213,45 @@
 
       </section>
 
+      <section>
+        <h3>Kap Verbal Reasoning</h3>
+
+        <div class="w3-hide">Analyze sentences and paragraphs
+          Derive a word’s meaning based upon its context
+          Detect relationships among words
+          Understand the logic of sentences and paragraphs
+          Draw inferences
+          Recognize major, minor, and irrelevant points
+          Summarize ideas
+          Understand passage structure
+          Recognize an author’s tone, purpose, and perspective</div>
+
+          <table class="w3-table-all">
+            <thead>
+              <tr class="my-color">
+                <th></th>
+                <th>Text Completion</th>
+                <th>Sentence Equivalence</th>
+                <th>Reading Comprehension</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Number of Questions</td>
+                <td>approx. 6</td>
+                <td>approx. 4</td>
+                <td>approx. 10</td>
+              </tr>
+              <tr>
+                <td>Time per Question</td>
+                <td>1 1.5 minutes per question</td>
+                <td>1.25 minute</td>
+                <td>1–3 minutes per passage and 1 minute per question </td>
+              </tr>
+            </tbody>
+          </table>
+          <p> ((1 + 1.5 + 2) * 2) + (1.25 * 4) + 10 + (1 + 1.5 + 2 + 2.5) </p>
+      </section>
     </section>
     
   </main>
