--- a/gre/notes/vocabulary.html
+++ b/gre/notes/vocabulary.html
@@ -4,7 +4,7 @@
 <head>
   <title></title>
   <script src="/initialize.js"></script>
-  <script src="../../variable.js"></script>
+  <script src="../../vocabulary.js"></script>
 </head>
 
 <body>
@@ -12,6 +12,7 @@
   <main class="w3-container">
 
     <section>
+        
     </section>
 
   </main>
