--- a/gre/notes/to-do.html
+++ b/gre/notes/to-do.html
@@ -104,6 +104,12 @@
             <li></li>
           </ul>
         </li>
+        <li>
+          <p><b><a href="www.gutenberg.org">gutenberg</a></b></p>
+          <ul>
+            <li></li>
+          </ul>
+        </li>
       </ul>
 
     </main>
