--- a/gre/notes/vocabulary.html
+++ b/gre/notes/vocabulary.html
@@ -4,7 +4,7 @@
 <head>
   <title></title>
   <script src="/initialize.js"></script>
-  <script src="../../vocabulary.js"></script>
+  <script src="../../js/vocabulary.js"></script>
 </head>
 
 <body>
