--- a/gre/pq/pq.html
+++ b/gre/pq/pq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>GRE Official</title>
+    <title></title>
     <script src="/initialize.js">
     </script>
   </head>
@@ -9,9 +9,9 @@
     <main class="w3-container">
 
       <div class="w3-bar my-margin">
-        <a href="pq-verbal-easy.html" class="w3-btn my-margin-small my-color">PQ Verbal Easy</a>
-        <a href="pq-verbal-medium.html" class="w3-btn my-margin-small my-color">PQ Verbal Medium</a>
-        <a href="pq-verbal-hard.html" class="w3-btn my-margin-small my-color">PQ Verbal Hard</a>
+        <a href="pq-easy-verbal.html" class="w3-btn my-margin-small my-color">Easy Verbal</a>
+        <a href="pq-medium-verbal.html" class="w3-btn my-margin-small my-color">Medium Verbal</a>
+        <a href="pq-hard-verbal.html" class="w3-btn my-margin-small my-color">Hard Verbal</a>
       </div>
     </main>
   </body>
