--- a/gre/kap/kap.html
+++ b/gre/kap/kap.html
@@ -7,13 +7,21 @@
   </head>
   <body>
     <main class="w3-container">
-      <div class="w3-bar my-margin">        
-        <a href="kap-argument-example.html" class="w3-btn my-margin-small my-color">Argument Examples</a>
-        <a href="kap-issue-example.html" class="w3-btn my-margin-small my-color">Issue Examples</a>
-        <a href="kap-verbal-example.html" class="w3-btn my-margin-small my-color">Verbal Example</a>
-        <a href="kap-verbal-es1.html" class="w3-btn my-margin-small my-color">Verbal Exercises 1</a>
-        <a href="kap-verbal-es2.html" class="w3-btn my-margin-small my-color">Verbal Exercises 2</a>
-        <a href="kap-verbal-es3.html" class="w3-btn my-margin-small my-color">Verbal Exercises 3</a>
+      <div class="w3-bar my-margin">
+        <a href="kap-practice-verbal.html" class="w3-btn my-margin-small my-color">Practice Verbal</a>
+        <a href="kap-sample-issue1.html" class="w3-btn my-margin-small my-color">Sample Issue 1</a>
+        <a href="kap-sample-issue2.html" class="w3-btn my-margin-small my-color">Sample Issue 2</a>
+        <a href="kap-sample-argument1.html" class="w3-btn my-margin-small my-color">Sample Argument 1</a>
+        <a href="kap-sample-argument2.html" class="w3-btn my-margin-small my-color">Sample Argument 2</a>
+        <a href="kap-sample-verbal.html" class="w3-btn my-margin-small my-color">Sample Verbal</a>
+        <a href="kap-ps-issue1.html" class="w3-btn my-margin-small my-color">Practice Set Issue 1</a>
+        <a href="kap-ps-issue2.html" class="w3-btn my-margin-small my-color">Practice Set Issue 2</a>
+        <a href="kap-ps-argument1.html" class="w3-btn my-margin-small my-color">Practice Set Argument 1</a>
+        <a href="kap-ps-argument2.html" class="w3-btn my-margin-small my-color">Practice Set Argument 2</a>
+        <a href="kap-ps-verbal.html" class="w3-btn my-margin-small my-color">Practice Set Verbal</a>
+        <a href="kap-ps1-verbal.html" class="w3-btn my-margin-small my-color">Practice Set 1 Verbal</a>
+        <a href="kap-ps2-verbal.html" class="w3-btn my-margin-small my-color">Practice Set 2 Verbal</a>
+        <a href="kap-ps3-verbal.html" class="w3-btn my-margin-small my-color">Practice Set 3 Verbal</a>
       </div>
     </main>
   </body>
