--- a/gre/mh/mh.html
+++ b/gre/mh/mh.html
@@ -8,12 +8,12 @@
   <body>
     <main class="w3-container">
       <div class="w3-bar my-margin">        
-        <a href="mh-argument-example.html" class="w3-btn my-margin-small my-color">Argument Examples</a>
-        <a href="mh-issue-example.html" class="w3-btn my-margin-small my-color">Issue Examples</a>
-        <a href="mh-verbal-example.html" class="w3-btn my-margin-small my-color">Verbal Example</a>
-        <a href="mh-verbal-es1.html" class="w3-btn my-margin-small my-color">Verbal Exercises 1</a>
-        <a href="mh-verbal-es2.html" class="w3-btn my-margin-small my-color">Verbal Exercises 2</a>
-        <a href="mh-verbal-es3.html" class="w3-btn my-margin-small my-color">Verbal Exercises 3</a>
+        <a href="mh-example-argument.html" class="w3-btn my-margin-small my-color">Example Argument</a>
+        <a href="mh-example-issue.html" class="w3-btn my-margin-small my-color">Example Issue</a>
+        <a href="mh-example-verbal.html" class="w3-btn my-margin-small my-color">Example Verbal</a>
+        <a href="mh-es1-verbal.html" class="w3-btn my-margin-small my-color">Exercise Set 1 Verbal</a>
+        <a href="mh-es2-verbal.html" class="w3-btn my-margin-small my-color">Exercise Set 2 Verbal</a>
+        <a href="mh-es3-verbal.html" class="w3-btn my-margin-small my-color">Exercise Set 3 Verbal</a>
       </div>
     </main>
   </body>
