--- a/gre/notes/to-do.html
+++ b/gre/notes/to-do.html
@@ -51,6 +51,12 @@
         <li>Push-GitCommand.ps1 - push html to github and back up file in Box</li>
       </ul>
 
+      <h4><b>Future Learning</b></h4>
+      <ul>
+        <li><a href="https://www.wolframalpha.com/">Wolfram Alpha</a></li>
+        <li><a href="https://d3js.org/">Data Drawing javascript Library D3</a></li>
+      </ul>
+
       <h4><b>Lifelong Learning</b></h4>
       <ul>
         <li>
