--- a/gre/og/og.html
+++ b/gre/og/og.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>GRE Official</title>
+    <title></title>
     <script src="/initialize.js">
     </script>
   </head>
@@ -9,13 +9,13 @@
     <main class="w3-container">
 
       <div class="w3-bar my-margin">
-        <a href="og-argument-example.html" class="w3-btn my-margin-small my-color">Argument Examples</a>
-        <a href="og-issue-example.html" class="w3-btn my-margin-small my-color">Issue Examples</a>
+        <a href="og-example-argument.html" class="w3-btn my-margin-small my-color">Example Argument</a>
+        <a href="og-example-issue.html" class="w3-btn my-margin-small my-color">Example Issue</a>
 
-        <a href="og-verbal-examples.html" class="w3-btn my-margin-small my-color">Verbal Examples</a>
-        <a href="og-verbal-easy.html" class="w3-btn my-margin-small my-color">Verbal Easy</a>
-        <a href="og-verbal-medium.html" class="w3-btn my-margin-small my-color">Verbal Medium</a>
-        <a href="og-verbal-hard.html" class="w3-btn my-margin-small my-color">Verbal Hard</a>
+        <a href="og-example-verbal.html" class="w3-btn my-margin-small my-color">Example Verbal</a>
+        <a href="og-easy-verbal.html" class="w3-btn my-margin-small my-color">Easy Verbal</a>
+        <a href="og-medium-verbal.html" class="w3-btn my-margin-small my-color">Medium Verbal</a>
+        <a href="og-hard-verbal.html" class="w3-btn my-margin-small my-color">Hard Verbal</a>
       </div>
     </main>
   </body>
