--- a/gre/kap/kap-sample-argument2.html
+++ b/gre/kap/kap-sample-argument2.html
@@ -19,7 +19,7 @@
       <ol>
         <li>
           <span class="step-info">
-            <b>» STEP 1</b>
+            <b> STEP 1</b>
           </span>
           <span class="step-title">
             Take the argument apart.</span>
@@ -27,11 +27,11 @@
             <i>Conclusion</i> (the point the argument’s trying to make): The growth in Freedonia’s airline industry will continue.
           </p>
           <p>
-            <i>Evidence</i> (facts offered to support the conclusion): Incomes are up. People have more vacation time. There's more interest in travel, indicated by media coverage of foreign lands.</p>
+            <i>Evidence</i> (facts offered to support the conclusion): Incomes are up. People have more vacation time. There's more interest in travel, indicated by media coverage of foreign lands.</p>
         </li>
         <li>
           <span class="step-info">
-            <b>» STEP 2</b>
+            <b> STEP 2</b>
           </span>
           <span class="step-title">
             Select the points you will make.</span>
@@ -52,16 +52,16 @@
             <li>Evidence that the positive economic trends will continue</li>
             <li>Evidence that people like to travel on vacation and, specifically, that they want to go places by air.</li>
             <li>Evidence suggesting the cause of the increased media coverage of foreign cultures is in fact due to an interest in travel or that people exposed to such content then want to travel</li>
-            <li>If all of the above are true, evidence that the Freedonian airline industry will grow as a result. </li>
+            <li>If all of the above are true, evidence that the Freedonian airline industry will grow as a result. </li>
           </ul>
         </li>
         <li>
           <span class="step-info">
-            <b>» STEP 3</b>
+            <b> STEP 3</b>
           </span>
           <span class="step-title">
             Organize, using Kaplan’s Argument essay template.</span>
-          <p>Your notes will likely be much shorter than this. </p>
+          <p>Your notes will likely be much shorter than this. </p>
           <p>Paragraph 1: The conclusion is that the positive growth in Freedonia’s commercial airline industry will continue. The evidence is that income, vacation time, and interest in travel are all on the rise. However, a good deal more evidence is required before one can accept the conclusion.</p>
           <p>Paragraph 2: The author assumes that positive economic conditions will continue. However, the cause of these conditions is not explained, so we need to ask whether the factors generating economic growth are stable or likely to subside. The author also assumes that consumers will put their money toward airline travel instead of other goods/services, so we need to know more about what people are likely to do with their discretionary income.</p>
           <p>Paragraph 3: The author assumes that the increased media attention to foreign cultures and tourist attractions is either a response to public interest in travel or is stimulating this interest. However, no connection between the topics of media coverage and a desire to travel is established. A question worth asking is whether the media are covering foreign cultures more because media executives have evidence of the public's increased interest in traveling to other countries or for some other reason. It's also worth asking whether people who see such content are more likely to travel by air.</p>
