--- a/gre/kap/kap-sample-issue2.html
+++ b/gre/kap/kap-sample-issue2.html
@@ -20,7 +20,7 @@
       <ol>
         <li>
           <span class="step-info">
-            <b>» STEP 1</b>
+            <b> STEP 1</b>
           </span>
           <span class="step-title">
             Take the issue apart.</span>
@@ -29,7 +29,7 @@
         </li>
         <li>
           <span class="step-info">
-            <b>» STEP 2</b>
+            <b> STEP 2</b>
           </span>
           <span class="step-title">
             Select the points you will make.</span>
@@ -42,9 +42,9 @@
             <i>for</i> holding people to high expectations:
           </p>
           <ul class="list-bullet">
-            <li>Striving to meet high expectations improves people’s skills, and when these individuals succeed, their success leads to increased confidence and higher performance. Example: challenge office interns.</li>
-            <li>Without expectations, people don’t know how they will be measured or to what level they should perform. Examples: 2nd graders design skyscrapers; retirees train for Olympics.</li>
-            <li>High expectations convey confidence and trust. Example: challenges from teachers.</li>
+            <li>Striving to meet high expectations improves people’s skills, and when these individuals succeed, their success leads to increased confidence and higher performance. Example: challenge office interns.</li>
+            <li>Without expectations, people don’t know how they will be measured or to what level they should perform. Examples: 2nd graders design skyscrapers; retirees train for Olympics.</li>
+            <li>High expectations convey confidence and trust. Example: challenges from teachers.</li>
           </ul>
           <p>Arguments
             <i>against</i> holding people to high expectations:
@@ -57,7 +57,7 @@
         </li>
         <li>
           <span class="step-info">
-            <b>» STEP 3</b>
+            <b> STEP 3</b>
           </span>
           <span class="step-title">
             Organize, using Kaplan’s Issue essay template.</span>
