--- a/gre/kap/kap-sample-argument1.html
+++ b/gre/kap/kap-sample-argument1.html
@@ -19,23 +19,23 @@
       <ol>
         <li>
           <span class="step-info">
-            <b>» STEP 1</b>
+            <b> STEP 1</b>
           </span>
           <span class="step-title">
             Take the argument apart.</span>
           <p>
-            <i>Conclusion</i> (the point the argument is trying to make): In the state's public school system, poorly trained teachers will become much better trained. </p>
+            <i>Conclusion</i> (the point the argument is trying to make): In the state's public school system, poorly trained teachers will become much better trained. </p>
           <p>
             <i>Evidence</i> (facts offered to support the conclusion): New guidelines require these teachers to complete graduate courses in education and educational psychology to be certified.
           </p>
         </li>
         <li>
           <span class="step-info">
-            <b>» STEP 2</b>
+            <b> STEP 2</b>
           </span>
           <span class="step-title">
             Select the points you will make.</span>
-          <p>Analyze the gaps between the evidence offered and the conclusion drawn. These unspoken conditions or beliefs necessary for the conclusion to make sense in light of the evidence are the author's assumptions. </p>
+          <p>Analyze the gaps between the evidence offered and the conclusion drawn. These unspoken conditions or beliefs necessary for the conclusion to make sense in light of the evidence are the author's assumptions. </p>
           <p>
             <i>Assumptions</i>:
           </p>
@@ -58,7 +58,7 @@
         </li>
         <li>
           <span class="step-info">
-            <b>» STEP 3</b>
+            <b> STEP 3</b>
           </span>
           <span class="step-title">
             Organize, using Kaplan’s Argument essay template.</span>
@@ -66,10 +66,10 @@
           <p>Paragraph 1: The argument is that improved academic training, specifically graduate-level credits in education and psychology, will substantially alleviate the problem of poorly performing teachers.
           </p>
           <p>Paragraph 2: The author assumes that classroom instruction in education will improve teachers’ classroom performance—that this is the knowledge teachers need and/or the way they should learn it. However, classroom courses in education and educational psychology may or may not address the cause of the problem. Indeed, perhaps the poor teachers have already taken the specified courses yet are still ineffective.</p>
-          <p>Paragraph 3: The author assumes some connection exists between certification under the new guidelines and actually teaching in the classroom. However, already-certified poor teachers may still be teaching in the future (without the training), and not-yet-certified teachers may not be hired in the public schools. </p>
+          <p>Paragraph 3: The author assumes some connection exists between certification under the new guidelines and actually teaching in the classroom. However, already-certified poor teachers may still be teaching in the future (without the training), and not-yet-certified teachers may not be hired in the public schools. </p>
           <p>Paragraph 4: If a similar state has instituted similar guidelines and seen improvement in teacher performance, then the argument would be stronger. Evidence that certification equates to actual teaching (there is a plan to remove uncertified teachers, and there's a budget to hire new teachers) would also strengthen the argument.</p>
           <p>Paragraph 5: The author relies upon unsupported assumptions, and people who care about the public schools should doubt that teachers will soon be more effective as a result of this plan.</p>
-          <p>Now use your notes as an outline to write from. </p>
+          <p>Now use your notes as an outline to write from. </p>
         </li>
       </ol>
     </section>
@@ -79,7 +79,7 @@
       <p>The argument that improved academic training, in the form of required credits in education and psychology, will substantially alleviate the problem of poorly performing teachers may seem logical at first glance. However, the author relies on unsupported assumptions about what kind of development teachers need and mechanisms for replacing poor teachers with newly certified teachers. Therefore, the argument is fundamentally flawed and unconvincing.</p>
       <p>First, the writer assumes that the required courses will produce better teachers. In fact, the courses might be entirely irrelevant to the teachers’ failings. Suppose, for example, that the main problem lies in cultural and linguistic misunderstandings between teachers and students; graduate-level courses that do not address these issues would be of little use in bridging these gaps and improving educational outcomes. Furthermore, the writer assumes that poorly performing teachers have not already taken these courses. If the state's teachers have already undergone such training but still fail to serve their students, then requiring them to take the classes again is unlikely to address the problem. In fact, the writer establishes no correlation between the teachers' classroom performance and their academic coursework.
       </p>
-      <p>Additionally, the writer provides no evidence that poorly performing teachers who are already certified will either stop teaching or will undergo additional training. In its current form, the argument implies that only teachers seeking certification, who may or may not be teachers already in the system, will receive the specified training. Furthermore, the author fails to establish a link between becoming certified and actually being hired in the public school system. If school systems have budget shortfalls and institute a hiring freeze, then newly certified teachers may not enter classrooms for quite some time. Unless there is a way to transition poor teachers out of the classroom and ensure teachers with proper training are soon hired, the bright future the writer envisions may be decades away. </p>
+      <p>Additionally, the writer provides no evidence that poorly performing teachers who are already certified will either stop teaching or will undergo additional training. In its current form, the argument implies that only teachers seeking certification, who may or may not be teachers already in the system, will receive the specified training. Furthermore, the author fails to establish a link between becoming certified and actually being hired in the public school system. If school systems have budget shortfalls and institute a hiring freeze, then newly certified teachers may not enter classrooms for quite some time. Unless there is a way to transition poor teachers out of the classroom and ensure teachers with proper training are soon hired, the bright future the writer envisions may be decades away. </p>
       <p>The notion that the specified coursework will create better teachers would be strengthened by evidence that the training will address barriers to educating students. For example, if a state with similar demographics had implemented similar guidelines and then seen either improved learning as measured by standardized tests or improved teaching as documented by teacher observations, then one could conclude with more confidence that the guidelines should be implemented in this state. Also, the author would be considerably more persuasive if she showed that a plan is in place to either require all teachers to gain this certification or terminate poor performers without the certification. The author should also demonstrate that the public schools have the budgets to hire newly certified teachers so they can begin to have an effect on students.</p>
       <p>In conclusion, the writer is not necessarily mistaken in stating that the state’s comprehensive guidelines will lead to improvement in educational outcomes in public schools. After all, the additional training would probably not adversely affect classroom performance. However, to support the assertion that the guidelines will effectively solve the state’s problem, the writer must first define the scope of the problem more clearly and submit more conclusive evidence that the new requirements will, in fact, improve overall teaching performance. Without such evidence, stakeholders in the public school system, including parents, administrators, and legislators, should be skeptical that education will improve anytime soon.</p>
       <section>
