--- a/gre/kap/kap-sample-verbal.html
+++ b/gre/kap/kap-sample-verbal.html
@@ -27,14 +27,14 @@
             <ol class="list-step-stacked counter-reset-2">
               <li>
                 <span class="step-info">
-                  <b>» STEP 2</b>
+                  <b> STEP 2</b>
                 </span>
                 <span class="step-title">Analyze the question stem.</span>
                 <p>The key phrase is “suggested by,” which indicates this is an Inference question. The correct answer is not explicitly stated in the text but can be discerned by an accurate reading of the text. </p>
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 3</b>
+                  <b> STEP 3</b>
                 </span>
                 <span class="step-title">Research the relevant section in the text.</span>
                 <p>This Inference question does not point to a particular statement in the passage, so you cannot research a particular sentence or section of the passage before approaching the answer choices. However, you can review your passage map so you have a firm grasp of the big picture of the passage; answer choices that contradict this or lie outside the scope of the passage can be eliminated. If any choices remain, you’ll need to check each one against the information provided in the text until you find one that is fully supported.
@@ -42,7 +42,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 4</b>
+                  <b> STEP 4</b>
                 </span>
                 <span class="step-title">Make a prediction.</span>
                 <p>Because of the open-ended nature of the question, you cannot formulate a precise prediction. However, your review of the passage map shows that because Spalding wanted to market baseball to Americans, he spread the story about an American, Doubleday, inventing it, even though Spalding had little evidence of this. Look for an answer choice that aligns with this main thrust of the passage, and look to eliminate choices that do not align.
@@ -50,7 +50,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 5</b>
+                  <b> STEP 5</b>
                 </span>
                 <span class="step-title">Evaluate the answer choices.</span>
                 <p>Eliminate choice
@@ -82,7 +82,7 @@
             <ol class="list-step-stacked counter-reset-2">
               <li>
                 <span class="step-info">
-                  <b>» STEP 2</b>
+                  <b> STEP 2</b>
                 </span>
                 <span class="step-title">Analyze the question stem.</span>
                 <p>The phrase “based on the passage” means this is an Inference question. As with all GRE Inference questions, while the correct answer(s) won’t be directly stated in the passage, it or they must be true given what is stated in the passage.
@@ -90,7 +90,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 3</b>
+                  <b> STEP 3</b>
                 </span>
                 <span class="step-title">Research the relevant text in the passage.</span>
                 <p>This is another open-ended Inference question. Again, use your passage map to refresh your memory of the key ideas of the passage—any choice that contradicts these or is a 180°, wanders Outside the Scope, or is too Extreme can be eliminated immediately. Be prepared to research any remaining choices in the appropriate place in the text.
@@ -98,7 +98,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 4</b>
+                  <b> STEP 4</b>
                 </span>
                 <span class="step-title">Make a prediction.</span>
                 <p>While a precise prediction is not possible, having read the passage strategically and already answered one open-ended Inference question about it, you have a strong sense of what kinds of statements would and would not be supported by the text.
@@ -106,7 +106,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 5</b>
+                  <b> STEP 5</b>
                 </span>
                 <span class="step-title">Evaluate the answer choices.</span>
                 <p>Choice
@@ -130,7 +130,7 @@
             <ol class="list-step-stacked counter-reset-2">
               <li>
                 <span class="step-info">
-                  <b>» STEP 2</b>
+                  <b> STEP 2</b>
                 </span>
                 <span class="step-title">Analyze the question stem.
                 </span>
@@ -139,14 +139,14 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 3</b>
+                  <b> STEP 3</b>
                 </span>
                 <span class="step-title">Research the relevant text in the passage.</span>
                 <p>From your passage map, you know that the evidence was a letter. </p>
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 4</b>
+                  <b> STEP 4</b>
                 </span>
                 <span class="step-title">Make a prediction.</span>
                 <p>You will look for the sentence that mentions the letter and says it was the only basis for the story.
@@ -154,7 +154,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 5</b>
+                  <b> STEP 5</b>
                 </span>
                 <span class="step-title">Evaluate the answer choices.</span>
                 <p>You might recall that the passage begins by presenting background information and introducing the topic, that the story about Doubleday was largely the creation of Spalding. Only later does the passage discuss how Spalding came up with the story. So begin your scan for the correct sentence at the end of the passage. You’ll quickly find the fourth sentence:
@@ -184,7 +184,7 @@
             <ol class="list-step-stacked counter-reset-2">
               <li>
                 <span class="step-info">
-                  <b>» STEP 2</b>
+                  <b> STEP 2</b>
                 </span>
                 <span class="step-title">Analyze the question stem.</span>
                 <p>The key word “suggests” means this is an Inference question. This question asks about a specific idea in the passage, “tea subjected to an aging process.” The correct answer(s) must be true given the information that is provided in the passage.
@@ -192,7 +192,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 3</b>
+                  <b> STEP 3</b>
                 </span>
                 <span class="step-title">Research the relevant section in the text.</span>
                 <p>The “tea subjected to an aging process” discussed in the passage is black pu-erh tea. According to the passage map, black pu-erh tea is different from other teas in two ways: it contains lovastatin, and it has an unusual flavor. If these details are not captured in your passage map, you can find them in the latter half of the passage, where black pu-erh tea is compared and contrasted with other teas.
@@ -200,7 +200,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 4</b>
+                  <b> STEP 4</b>
                 </span>
                 <span class="step-title">Make a prediction.
                 </span>
@@ -208,7 +208,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 5</b>
+                  <b> STEP 5</b>
                 </span>
                 <span class="step-title">Evaluate the answer choices.</span>
                 <p>Answer choices
@@ -241,7 +241,7 @@
             <ol class="list-step-stacked counter-reset-2">
               <li>
                 <span class="step-info">
-                  <b>» STEP 2</b>
+                  <b> STEP 2</b>
                 </span>
                 <span class="step-title">Analyze the question stem.</span>
                 <p>The word “inferred” leaves little doubt this is an Inference question. Again, this question is directed at specific information in the passage—this time what the passage says about black teas.
@@ -249,7 +249,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 3</b>
+                  <b> STEP 3</b>
                 </span>
                 <span class="step-title">Research the relevant section in the text.</span>
                 <p>Review what the passage says about black teas. In discussing the processing steps that differentiate types of tea, the passage says that pu-erh tea is oxidized but that what makes it different from black tea is that it is also aged. Therefore, black teas are also oxidized, but they are not aged. The passage also says that most black teas contain more caffeine than black pu-erh. Moreover, the passage says that pu-erh is like “all other teas” in containing antioxidants, so black teas must contain antioxidants.
@@ -257,14 +257,14 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 4</b>
+                  <b> STEP 4</b>
                 </span>
                 <span class="step-title">Make a prediction.</span>
                 <p>The correct answer will correspond to one or more of the ideas in Step 3.</p>
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 5</b>
+                  <b> STEP 5</b>
                 </span>
                 <span class="step-title">Evaluate the answer choices.</span>
                 <p>Choice
@@ -325,7 +325,7 @@
                 <li>
                   <div class="step-title">
                     <span class="handwritten no-break">
-                      <i>¶ 1:</i>
+                      <i>1:</i>
                     </span>
                   </div>
                   <div class="step-info">
@@ -337,7 +337,7 @@
                 <li>
                   <div class="step-title">
                     <span class="handwritten no-break">
-                      <i>¶ 2:</i>
+                      <i>2:</i>
                     </span>
                   </div>
                   <div class="step-info">
@@ -347,7 +347,7 @@
                   </div>
                 </li>
                 <li>
-                  <div class="step-title"></div>
+                  <span></span>
                   <div class="step-info">
                     <figure class="figure indd-width-full msbooks-block-image">
                       <img class="text-image ch07-35 msbooks-image-zoomable" alt="image" src="../img/chapter07_ch07-35.png" />
@@ -355,7 +355,7 @@
                   </div>
                 </li>
                 <li>
-                  <div class="step-title"></div>
+                  <span></span>
                   <div class="step-info">
                     <span class="handwritten">
                       <i>Both FWs &amp; traditional employees face economic uncertainty. Will they work together?</i>
@@ -530,7 +530,7 @@
             <ol class="list-step-stacked">
               <li>
                 <span class="step-info">
-                  <b>» STEP 1</b>
+                  <b> STEP 1</b>
                 </span>
                 <span class="step-title">
                   Read the sentence, looking for clues.
@@ -539,7 +539,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 2</b>
+                  <b> STEP 2</b>
                 </span>
                 <span class="step-title">
                   Predict an answer.</span>
@@ -547,7 +547,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 3</b>
+                  <b> STEP 3</b>
                 </span>
                 <span class="step-title">
                   Select the two choices that most closely match your prediction.</span>
@@ -560,7 +560,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 4</b>
+                  <b> STEP 4</b>
                 </span>
                 <span class="step-title">
                   Check your answers to see if the sentence retains the same meaning.</span>
@@ -602,7 +602,7 @@
               <li>
                 <span class="step-info">
                   <b>
-                    » STEP 1</b>
+                     STEP 1</b>
                 </span>
                 <span class="step-title">
                   Read the sentence, looking for clues.</span>
@@ -612,7 +612,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 2</b>
+                  <b> STEP 2</b>
                 </span>
                 <span class="step-title">
                   Predict an answer.</span>
@@ -620,7 +620,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 3
+                  <b> STEP 3
                   </b>
                 </span>
                 <span class="step-title">
@@ -632,7 +632,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 4</b>
+                  <b> STEP 4</b>
                 </span>
                 <span class="step-title">
                   Check your answer.</span>
@@ -662,7 +662,7 @@
             <ol class="list-step-stacked">
               <li>
                 <span class="step-info">
-                  <b>» STEP 1</b>
+                  <b> STEP 1</b>
                 </span>
                 <span class="step-title">
                   Read the sentence, looking for clues.</span>
@@ -672,7 +672,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 2</b>
+                  <b> STEP 2</b>
                 </span>
                 <span class="step-title">
                   Predict an answer.</span>
@@ -680,7 +680,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 3</b>
+                  <b> STEP 3</b>
                 </span>
                 <span class="step-title">
                   Select the choice that most closely matches your prediction.
@@ -692,7 +692,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 4</b>
+                  <b> STEP 4</b>
                 </span>
                 <span class="step-title">
                   Check your answer.</span>
@@ -726,7 +726,7 @@
             <ol class="list-step-stacked">
               <li>
                 <span class="step-info">
-                  <b>» STEP 1</b>
+                  <b> STEP 1</b>
                 </span>
                 <span class="step-title">
                   Read the sentence, looking for clues.</span>
@@ -735,7 +735,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 2</b>
+                  <b> STEP 2</b>
                 </span>
                 <span class="step-title">
                   Predict an answer for the easier/easiest blank.</span>
@@ -743,7 +743,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 3</b>
+                  <b> STEP 3</b>
                 </span>
                 <span class="step-title">
                   Select the answer choice that most closely matches your prediction.</span>
@@ -754,7 +754,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 4</b>
+                  <b> STEP 4</b>
                 </span>
                 <span class="step-title">
                   Predict and select for the remaining blanks.</span>
@@ -766,7 +766,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 5</b>
+                  <b> STEP 5</b>
                 </span>
                 <span class="step-title">
                   Check your answers.</span>
@@ -805,7 +805,7 @@
             <ol class="list-step-stacked">
               <li>
                 <span class="step-info">
-                  <b>» STEP 1</b>
+                  <b> STEP 1</b>
                 </span>
                 <span class="step-title">
                   Read the sentence, looking for clues.</span>
@@ -814,7 +814,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 2</b>
+                  <b> STEP 2</b>
                 </span>
                 <span class="step-title">
                   Predict an answer for the easier/easiest blank.</span>
@@ -822,7 +822,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 3</b>
+                  <b> STEP 3</b>
                 </span>
                 <span class="step-title">
                   Select the answer choice that most closely matches your prediction.
@@ -834,7 +834,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 4</b>
+                  <b> STEP 4</b>
                 </span>
                 <span class="step-title">
                   Predict and select for the remaining blanks.</span>
@@ -848,7 +848,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 5</b>
+                  <b> STEP 5</b>
                 </span>
                 <span class="step-title">
                   Check your answers.</span>
@@ -884,7 +884,7 @@
             <ol class="list-step-stacked">
               <li>
                 <span class="step-info">
-                  <b>» STEP 1</b>
+                  <b> STEP 1</b>
                 </span>
                 <span class="step-title">
                   Read the sentence, looking for clues.</span>
@@ -893,7 +893,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 2</b>
+                  <b> STEP 2</b>
                 </span>
                 <span class="step-title">
                   Predict an answer.</span>
@@ -901,7 +901,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 3</b>
+                  <b> STEP 3</b>
                 </span>
                 <span class="step-title">
                   Select the two choices that most closely match your prediction.</span>
@@ -914,7 +914,7 @@
               </li>
               <li>
                 <span class="step-info">
-                  <b>» STEP 4</b>
+                  <b> STEP 4</b>
                 </span>
                 <span class="step-title">
                   Check your answers to see if the sentence retains the same meaning.
