--- a/gre/mp/mp-example-verbal.html
+++ b/gre/mp/mp-example-verbal.html
@@ -21,10 +21,10 @@
           <p>character</p>
         </div>
         <div class="explanation" data-answer="C">
-          <p>First, read <b>only</b> the sentence. Find the clue (failed to secure the prestigious university's coveted diploma) and the pivot (despite). Write your own fill-in–here, <i>studying</i> would be a good choice. Now compare <i>studying</i> with every answer choice:</p>
+          <p>First, read <b>only</b> the sentence. Find the clue (failed to secure the prestigious university's coveted diploma) and the pivot (despite). Write your own fill-in–here, <b><i>studying</i></b> would be a good choice. Now compare <b><i>studying</i></b> with every answer choice:</p>
           <p>studying</p>
           <p>A ✗<br />B ✗<br />C ✓<br />D ✗<br />E ~</p>
-          <p>The answer is <b>(C)</b>. <i>Lucubration</i> means “intense study.”</p>
+          <p>The answer is <b>(C)</b>. <b><i>Lucubration</i></b> means “intense study.”</p>
         </div>
       </div>
       <div id="question2" data-choice-type="radio">
@@ -40,8 +40,8 @@
         </div>
         <div class="explanation" data-answer="C">
           <p>Find the <u>target</u>, <u>clue</u>, and the <u>pivot</u></p>
-          <p>Stating the target explicitly can help to locate the clue. Here, the target is simply <i>the student</i>. In this case, the clue is <i>expelled</i>. The sentence reads “less _______…not expelled.<i>”</i> So the pivot is <i>less…not</i>.</p>
-          <p>Think about what this means. If the student were <i>less</i><span class="u">such-and-such</span>, then he would <i>not</i> have been expelled. So <span class="u">such-and-such</span> got him expelled. In other words, the blank agrees with <i>expelled. Less</i> and <i>not</i> cancel each other out as negatives.</p>
+          <p>Stating the target explicitly can help to locate the clue. Here, the target is simply <b><i>the student</i></b>. In this case, the clue is <b><i>expelled</i></b>. The sentence reads “less _______…not expelled.<b><i>”</i></b> So the pivot is <b><i>less…not</i></b>.</p>
+          <p>Think about what this means. If the student were <b><i>less</i></b><span class="u">such-and-such</span>, then he would <b><i>not</i></b> have been expelled. So <span class="u">such-and-such</span> got him expelled. In other words, the blank agrees with <b><i>expelled. Less</i></b> and <b><i>not</i></b> cancel each other out as negatives.</p>
           <p>indefatigable = tireless</p>
           <p>perseverant = determined</p>
           <p>refractory = ??</p>
@@ -49,7 +49,7 @@
           <p>indigent = poor</p>
           <p>So now your paper might look like this:</p>
           <p>A ✗<br />B ✗<br />C ?<br />D ~<br />E ~</p>
-          <p>The correct answer is in fact <b>(C)</b>, since <i>refractory</i> means “rebellious.” But even if you didn't know what <i>refractory</i> means, you would have a good shot at getting this problem right through process of elimination. Also, notice that you can write a plausible story around some of the wrong answer choices. For example, “If the student had been less <i>playful</i>, he wouldn't have been expelled.” This could make sense if the student was playing games during a serious lesson. Or maybe, “If the student had been less <i>indigent</i>, he wouldn't have been expelled.” What an indictment of the school's administration!</p>
+          <p>The correct answer is in fact <b>(C)</b>, since <b><i>refractory</i></b> means “rebellious.” But even if you didn't know what <b><i>refractory</i></b> means, you would have a good shot at getting this problem right through process of elimination. Also, notice that you can write a plausible story around some of the wrong answer choices. For example, “If the student had been less <b><i>playful</i></b>, he wouldn't have been expelled.” This could make sense if the student was playing games during a serious lesson. Or maybe, “If the student had been less <b><i>indigent</i></b>, he wouldn't have been expelled.” What an indictment of the school's administration!</p>
         </div>
       </div>
       <div id="question3" data-choice-type="radio">
@@ -69,11 +69,11 @@
         <div class="explanation" data-answer="BF">
           <p><b>Blank #1:</b> <b>Clues</b>: seasoned, unflappable; <b>Pivots</b>: even ... otherwise ...; The pivot express opposition, what is the opposition of unflappable?</p>
           <p><b>Blank #2:</b> <b>Clues</b>: heckler; <b>Pivots</b>: none; No pivot means agreement.</p>
-          <p>Your fill-in for #2 should probably be <i>heckling</i>. Remember to reuse the given language in the fill-in when you can.</p>
-          <p>Now you can use that fill-in as another clue. There is no pivot between the two blanks, meaning that the two fill-ins agree in some way. The relationship seems to be causal: the opera performers are going to react to that heckling. A likely fill-in would be <i>upset by</i> or <i>afraid of</i>.</p>
+          <p>Your fill-in for #2 should probably be <b><i>heckling</i></b>. Remember to reuse the given language in the fill-in when you can.</p>
+          <p>Now you can use that fill-in as another clue. There is no pivot between the two blanks, meaning that the two fill-ins agree in some way. The relationship seems to be causal: the opera performers are going to react to that heckling. A likely fill-in would be <b><i>upset by</i></b> or <b><i>afraid of</i></b>.</p>
           <p>Your paper might now look like this: afraid of…, heckling</p>
           <p>A ✗ A ✗<br />B ✓ B ~<br />C ? C ✓</p>
-          <p>Here is an example of what a student might have written down for this question. This student wasn't sure about <i>tempered by</i>, and didn't know exactly about <i>lionizing</i> but felt that it wasn't quite right.</p>
+          <p>Here is an example of what a student might have written down for this question. This student wasn't sure about <b><i>tempered by</i></b>, and didn't know exactly about <b><i>lionizing</i></b> but felt that it wasn't quite right.</p>
         </div>
       </div>
       <div id="question4" data-choice-type="radio">
@@ -95,16 +95,44 @@
           <p>dispelled</p>
           <p>promulgated</p>
         </div>
-        <div class="explanation" data-answer="BF">
-          <p><b>Blank #1:</b> <b>Clues</b>: seasoned, unflappable; <b>Pivots</b>: even ... otherwise ...; The pivot express opposition, what is the opposition of unflappable?</p>
-          <p><b>Blank #2:</b> <b>Clues</b>: heckler; <b>Pivots</b>: none; No pivot means agreement.</p>
-          <p>Your fill-in for #2 should probably be <i>heckling</i>. Remember to reuse the given language in the fill-in when you can.</p>
-          <p>Now you can use that fill-in as another clue. There is no pivot between the two blanks, meaning that the two fill-ins agree in some way. The relationship seems to be causal: the opera performers are going to react to that heckling. A likely fill-in would be <i>upset by</i> or <i>afraid of</i>.</p>
-          <p>Your paper might now look like this: afraid of…, heckling</p>
-          <p>A ✗ A ✗<br />B ✓ B ~<br />C ? C ✓</p>
-          <p>Here is an example of what a student might have written down for this question. This student wasn't sure about <i>tempered by</i>, and didn't know exactly about <i>lionizing</i> but felt that it wasn't quite right.</p>
+        <div class="explanation" data-answer="AEH">
+            <p class="body-text">While this sentence has three blanks instead of two, and is made up of more than one sentence, your method is the same—start with the easiest blank. The easiest blank is often the one surrounded by the most text—that is, the one that is furthest from the other two blanks and thus has the most potential clues located near it. Here, the first blank seems promising:</p>
+            <p class="blockquote">Perceptions of the (i) ________ role of intellectual practices within modern life underlie the familiar stereotypes of the educated as eggheads, ideologues, or worse.</p>
+            <p class="body-text">The target is the <b><i>role</i></b>, and the role <b><i>underlies stereotypes</i></b> about eggheads “or worse.” So the word describing the role should be related to the idea of intellectual = egghead (a mild slang term roughly equivalent to “nerd”). Don't ignore the phrase <b><i>within modern life</i></b>. A good fill-in would be <b><i>irrelevant</i></b>. The sentence seems to be saying that people think intellectuals are eggheads because intellectual practices are not a helpful or important part of modern life.</p>
+            <p class="body-text">The second sentence mirrors that idea (<b><i>These negative characterizations ..</i></b>.). It seems clear that the speaker is trying to defend academia. A good fill-in for the second blank would be <b><i>misunderstanding</i></b> or <b><i>twisting</i></b> (you can't really be sure if the people who think intellectuals are “eggheads” are getting it wrong deliberately or not).</p>
+            <p class="body-text">Finally, you have a negative pivot: <b><i>unlikely</i></b> (and another one, <b><i>unless</i></b>). Work backwards on this sentence:</p>
+            <p class="blockquote">If teachers DON'T address negative stereotypes directly…</p>
+            <p class="blockquote">the stereotypes will continue</p>
+            <p class="blockquote">so, the stereotypes are <b><i>unlikely to be</i></b> <b><i>eliminated</i></b> or <b><i>corrected</i></b></p>
+            <table cellpadding="5" cellspacing="0" style="padding-left: 40px;" width="100%">
+              <col width="33%" />
+              <col width="34%" />
+              <col width="33%" />
+              <tr>
+                <td valign="top">irrelevant</td>
+                <td valign="top">misunderstanding</td>
+                <td valign="top">eliminated</td>
+              </tr>
+              <tr>
+                <td valign="top">A ✓</td>
+                <td valign="top">D ✗</td>
+                <td valign="top">G ~</td>
+              </tr>
+              <tr>
+                <td valign="top">B ?</td>
+                <td valign="top">E ✓</td>
+                <td valign="top">H ✓</td>
+              </tr>
+              <tr>
+                <td valign="top">C ✗</td>
+                <td valign="top">F ✗</td>
+                <td valign="top">I ✗</td>
+              </tr>
+            </table>
+            <p class="body-text">The correct answer is <b>incongruous</b>, <b>confounding</b>, and <b>dispelled</b>.</p>
         </div>
-      </div>      <div id="question4" data-choice-type="radio">
+      </div>
+      <div id="question5" data-choice-type="radio">
         <div class="question">
           <p>(i) ___________ subject of the sermon, his words possessed a (ii) _________ quality few could fail to find utterly enchanting. It was only when his conclusion devolved into a (iii) _________ that the congregation began to fantasize about returning to the comfort of home.</p>
         </div>
@@ -123,14 +151,16 @@
           <p>seemingly unending string of divagations</p>
           <p>dubiously sanctified series of assignations</p>
         </div>
-        <div class="explanation" data-answer="BF">
-          <p><b>Blank #1:</b> <b>Clues</b>: seasoned, unflappable; <b>Pivots</b>: even ... otherwise ...; The pivot express opposition, what is the opposition of unflappable?</p>
-          <p><b>Blank #2:</b> <b>Clues</b>: heckler; <b>Pivots</b>: none; No pivot means agreement.</p>
-          <p>Your fill-in for #2 should probably be <i>heckling</i>. Remember to reuse the given language in the fill-in when you can.</p>
-          <p>Now you can use that fill-in as another clue. There is no pivot between the two blanks, meaning that the two fill-ins agree in some way. The relationship seems to be causal: the opera performers are going to react to that heckling. A likely fill-in would be <i>upset by</i> or <i>afraid of</i>.</p>
-          <p>Your paper might now look like this: afraid of…, heckling</p>
-          <p>A ✗ A ✗<br />B ✓ B ~<br />C ? C ✓</p>
-          <p>Here is an example of what a student might have written down for this question. This student wasn't sure about <i>tempered by</i>, and didn't know exactly about <i>lionizing</i> but felt that it wasn't quite right.</p>
+        <div class="explanation" data-answer="ADH">
+            <p class="body-text">Attack the easiest blank first. That might be the last one, since you have the clues that the sermon's conclusion <b><i>devolved</i></b> into whatever goes in the blank, and that <b><i>the congregation began to fantasize about returning to the comfort of home</i></b>. Both clues tell you that you want a fill-in that means something like <b><i>bunch of stupid or boring stuff</i></b>.</p>
+            <p class="body-text">Now that you have mentally completed the last sentence, it might help to paraphrase it before using the information to work backwards and analyze the rest of the sentence. Paraphrase: <b><i>It was only when the conclusion became stupid or boring that the people got bored</i></b>. The phrase <b><i>It was only when</i></b> serves as a pivot: before things got stupid or boring, they must have been pretty good, as you can verify from the clue <b><i>utterly enchanting</i></b>.</p>
+            <p class="body-text">The second blank is pretty easy:…<b><i>his words possessed a _______ quality few could fail to find utterly enchanting</i></b>. That means that nearly everyone finds his words enchanting. In fact, you could recycle that word and put it in the blank—a good fill-in here would be <b><i>enchanting</i></b>.</p>
+            <p class="body-text">Finally, the first blank. It's pretty hard to fill in this one without glancing at the answer choices, but at least try to figure out a general category of what you'll be looking for. There is a blank about the <b><i>subject</i></b>of the sermon, and then something nice about the words used in the sermon. Either these two things will go in the same direction or in an opposite direction.</p>
+            <p class="body-text">Now try the choices (in any order you prefer).</p>
+            <p class="body-text">In the first blank, <b><i>In spite of the insipid</i></b> makes sense—the meaning is <b><i>In spite of the bad quality of the topic, the words of the sermon were enchanting</i></b>. In the second option, <b><i>notwithstanding</i></b> is similar to <b><i>in spite of</i></b>, so you would expect something bad to come after, but <b><i>salubrious</i></b> means <b><i>healthy</i></b>. Since the third choice begins with <b><i>because</i></b>, you would expect something positive to come after it (<b><i>Because of some good quality of the sermon, the words were enchanting)</i></b>. But <b><i>inauspicious</i></b> means <b><i>likely to be unsuccessful</i></b>. Only <b><i>In spite of the insipid</i></b> works.</p>
+            <p class="body-text">In the second blank, only <b><i>euphonious</i></b> works. The root <b><i>eu</i></b> means <b><i>good</i></b>, but that's not too helpful here, since all three words use that root. However, <b><i>euphemistic</i></b> (substituting inoffensive words in for more explicit or hurtful ones) doesn't make sense, and <b><i>eulogistic</i></b> (full of praise, especially for a deceased person) also doesn't match the idea of <b><i>enchanting</i></b>.</p>
+            <p class="body-text">Finally, the only phrase that means anything like <b><i>stupid/boring stuff</i></b> is <b><i>seemingly unending string of divagations</i></b> (<b><i>divagations</i></b> are tangents, or instances of going off-topic). <b><i>Prevarications</i></b> are falsehoods, and <b><i>assignations</i></b> are romantic meetups.</p>
+            <p class="body-text">The answer is <b>In spite of the insipid</b>, <b>euphonious</b>, and <b>seemingly unending string of divagations</b>.</p>
         </div>
       </div>
       <div id="question3" data-choice-type="radio">
@@ -149,8 +179,8 @@
         </div>
         <div class="explanation" data-answer="C">
           <p>Find the <u>target</u>, <u>clue</u>, and the <u>pivot</u></p>
-          <p>Stating the target explicitly can help to locate the clue. Here, the target is simply <i>the student</i>. In this case, the clue is <i>expelled</i>. The sentence reads “less _______…not expelled.<i>”</i> So the pivot is <i>less…not</i>.</p>
-          <p>Think about what this means. If the student were <i>less</i><span class="u">such-and-such</span>, then he would <i>not</i> have been expelled. So <span class="u">such-and-such</span> got him expelled. In other words, the blank agrees with <i>expelled. Less</i> and <i>not</i> cancel each other out as negatives.</p>
+          <p>Stating the target explicitly can help to locate the clue. Here, the target is simply <b><i>the student</i></b>. In this case, the clue is <b><i>expelled</i></b>. The sentence reads “less _______…not expelled.<b><i>”</i></b> So the pivot is <b><i>less…not</i></b>.</p>
+          <p>Think about what this means. If the student were <b><i>less</i></b><span class="u">such-and-such</span>, then he would <b><i>not</i></b> have been expelled. So <span class="u">such-and-such</span> got him expelled. In other words, the blank agrees with <b><i>expelled. Less</i></b> and <b><i>not</i></b> cancel each other out as negatives.</p>
           <p>indefatigable = tireless</p>
           <p>perseverant = determined</p>
           <p>refractory = ??</p>
@@ -158,7 +188,7 @@
           <p>indigent = poor</p>
           <p>So now your paper might look like this:</p>
           <p>A ✗<br />B ✗<br />C ?<br />D ~<br />E ~</p>
-          <p>The correct answer is in fact <b>(C)</b>, since <i>refractory</i> means “rebellious.” But even if you didn't know what <i>refractory</i> means, you would have a good shot at getting this problem right through process of elimination. Also, notice that you can write a plausible story around some of the wrong answer choices. For example, “If the student had been less <i>playful</i>, he wouldn't have been expelled.” This could make sense if the student was playing games during a serious lesson. Or maybe, “If the student had been less <i>indigent</i>, he wouldn't have been expelled.” What an indictment of the school's administration!</p>
+          <p>The correct answer is in fact <b>(C)</b>, since <b><i>refractory</i></b> means “rebellious.” But even if you didn't know what <b><i>refractory</i></b> means, you would have a good shot at getting this problem right through process of elimination. Also, notice that you can write a plausible story around some of the wrong answer choices. For example, “If the student had been less <b><i>playful</i></b>, he wouldn't have been expelled.” This could make sense if the student was playing games during a serious lesson. Or maybe, “If the student had been less <b><i>indigent</i></b>, he wouldn't have been expelled.” What an indictment of the school's administration!</p>
         </div>
       </div>
     </div>
