--- a/gre/notes/vocabulary.html
+++ b/gre/notes/vocabulary.html
@@ -9,7 +9,6 @@
 <body>
 
   <main class="w3-container">
-
     <div class="w3-hide" id="vocabulary">
       <div id="og-book">adjudicate negate mundane tangential </div>
 
@@ -33,12 +32,14 @@
 
       <div id="pr-book">ordeal whittle reinstate churn inordinate cynical hegemony pesky genuine florid superfluous apocryphal laconic garrulous ascetic taciturn brisk sheer rut glean harrowing stumble slate verbiage predicament repertoire endear diminutive suffice furl grievance formidable amass vigorous conflate jaded tack ramble culmination reiterate </div>
 
+      <div id="pr-vw-book">vaunt lucrative solicit aptitude </div>
+
       <div id="pr-sample">demarcation execrable boisterous etiolate circumscribe imposition infringement intransigence comportment alleviate delineate balk revel retaliate forebode</div>
 
 
       <div id="mp-book">forthright volubility accolade iconoclastic reprobate clamor mercurial fluctuation equivocation condemnation supplant supersede</div>
       
-      <div id="mp-example">indefatigable refractory expel prestigious covet imbibe lugubrious lucubration magnanimity unflappable</div>
+      <div id="mp-example">indefatigable refractory expel prestigious covet imbibe lugubrious lucubration magnanimity unflappable seasoned heckle intrepid extol lionize badger salubrious confound corroborate espouse sermon enchanting congregation auspicious euphony euphemistic eulogize fallacy prevaricate divagate dubious sanctify assignation</div>
         
       <div id="test">revel retaliate connoisseur palate capital partake contingent</div>
     </div>
