--- a/gre/pr/pr.html
+++ b/gre/pr/pr.html
@@ -14,6 +14,13 @@
         <a href="pr-sample-verbal.html" class="w3-btn my-margin-small my-color">Sample Verbal</a>
         <a href="pr-drill-verbal.html" class="w3-btn my-margin-small my-color">Drill Verbal</a>
         <a href="pr-ps-verbal.html" class="w3-btn my-margin-small my-color">Practice Set Verbal</a>
+        <a href="pr-drill1-verbal.html" class="w3-btn my-margin-small my-color">Drill 1 Verbal</a>
+        <a href="pr-drill2-verbal.html" class="w3-btn my-margin-small my-color">Drill 2 Verbal</a>
+        <a href="pr-drill3-verbal.html" class="w3-btn my-margin-small my-color">Drill 3 Verbal</a>
+        <a href="pr-drill4-verbal.html" class="w3-btn my-margin-small my-color">Drill 4 Verbal</a>
+        <a href="pr-drill5-verbal.html" class="w3-btn my-margin-small my-color">Drill 5 Verbal</a>
+        <a href="pr-drill6-verbal.html" class="w3-btn my-margin-small my-color">Drill 6 Verbal</a>
+        <a href="pr-drill7-verbal.html" class="w3-btn my-margin-small my-color">Drill 7 Verbal</a>
       </div>
     </main>
   </body>
