--- a/gre/notes/vocabulary.html
+++ b/gre/notes/vocabulary.html
@@ -25,7 +25,7 @@
       <div id="mh-example">provocative antipathy blare imperturbable indigence aestheticism equanimity diligence virulence sentiment dissent stagnant accommodate rectify insatiable qualm deliberate avarice deft innate perspicacity genuflect hone deride undermine malevolent tacit morose deject</div>
 
 
-      <div id="kap-book">aver distill gauge innate exhaustive cram diction bog plethora preponderance futile sanguine ignominy gregarious noisome pulchritudinous decadence avert cadaver belligerent cascade enigma appraise adumbrate assay descry peruse embellish insouciant moribund discountenance attenuate exalt commiserate reprove castigate bemused flag enervate indubitable galvanize acquaint rationale rebut enzymes sift succinct savvy jot telegraph holistic expository dissect succumb subsidiary </div>
+      <div id="kap-book">aver distill gauge innate exhaustive cram diction bog plethora preponderance futile sanguine ignominy gregarious noisome pulchritudinous decadence avert cadaver belligerent cascade enigma appraise adumbrate assay descry peruse embellish insouciant moribund attenuate exalt commiserate reprove castigate bemused flag enervate indubitable galvanize acquaint rationale rebut enzymes sift succinct savvy jot telegraph holistic expository dissect succumb subsidiary </div>
 
       <div id="kap-sample">bewilder uncoordinated exorbitant fathom interpolate apogee impasse capitulate impugn acrimony cacophony candid benevolent melancholy eloquent vociferous discern avid dubious ferment prescribe connoisseur palate contingent abate capital guru proverbial vicissitude partake communal bifurcation </div>
 
@@ -37,11 +37,9 @@
       <div id="pr-sample">demarcation execrable boisterous etiolate circumscribe imposition infringement intransigence comportment alleviate delineate balk revel retaliate forebode</div>
 
 
-      <div id="mp-book">forthright volubility accolade iconoclastic reprobate clamor mercurial fluctuation equivocation condemnation supplant supersede</div>
+      <div id="mp-book">forthright volubility accolade iconoclastic reprobate clamor mercurial fluctuation equivocation condemnation supplant supersede countenance rigorous purport</div>
       
       <div id="mp-example">indefatigable refractory expel prestigious covet imbibe lugubrious lucubration magnanimity unflappable seasoned heckle intrepid extol lionize badger salubrious confound corroborate espouse sermon enchanting congregation auspicious euphony euphemistic eulogize fallacy prevaricate divagate dubious sanctify assignation</div>
-        
-      <div id="test">revel retaliate connoisseur palate capital partake contingent</div>
     </div>
 
   </main>
