--- a/notes/to-do.html
+++ b/notes/to-do.html
@@ -37,10 +37,8 @@
     <ul>
       <li>
         <b>VPN</b>
-        <ul>
-          <li></li>
-        </ul>
       </li>
+      <li>PDF js </li>
       <li> <b>https://gre.etest.net.cn/login.do?lang=en_US</b> - <b>chinese</b> gre registration</li>
       <li><a href="https://www.kaptest.com/gre/free/gre-practice">Kaplan Free GRE Practice</a></li>
       <li><a href="http://www.mhpracticeplus.com/tests/GRE2016/index.html">MH GRE Practice Online</a></li>
