--- a/notes/products/computers.html
+++ b/notes/products/computers.html
@@ -10,8 +10,26 @@
 
   <main class="w3-container">
 
+    <div class="w3-bar">
+      <a class="my-page" href="https://www.acer.com/ac/en/US/content/group/laptops">Acer</a>
+      <a class="my-page" href="https://www.apple.com/ipad/">Apple</a>
+      <a class="my-page" href="https://www.asus.com/us/">ASUS</a>
+      <a class="my-page" href="https://www.dell.com/en-us/shop/scc/sc/2-in-1-laptop">Dell</a>
+      <a class="my-page" href="https://store.google.com">Google</a>
+      <a class="my-page" href="https://store.hp.com/us/en/vwa/laptops">HP</a>
+      <a class="my-page" href="https://www.lenovo.com/us/en/laptops/c/LAPTOPS">Lenovo</a>
+      <a class="my-page" href="https://www.lg.com/us">LG</a>
+      <a class="my-page" href="https://us.msi.com/">MSI</a>
+      <a class="my-page" href="https://www.razer.com/">Razer</a>
+      <a class="my-page" href="https://www.samsung.com/us/">Samsung</a>
+      <a class="my-page" href="https://www.sony.com">Sony</a>
+      <a class="my-page" href="https://www.microsoft.com/en-us/store/b/surface">Surface</a>
+    </div>
+
     <table class="w3-table-all w3-card w3-section">
-      <caption><h3>Desktop</h3></caption>
+      <caption>
+        <h3>Desktop</h3>
+      </caption>
       <thead>
         <tr class="my-color">
           <th>Component</th>
@@ -20,44 +38,129 @@
       </thead>
       <tbody>
         <tr>
-          <td><a href="https://ark.intel.com/products/codename/97787/Coffee-Lake"><b>CPU</b></a>: <a href="https://www.intel.com/content/www/us/en/products/processors/core/i5-processors/i5-8400.html"><b>i5-8400</b></a></td>
-          <td><a href="https://www.intel.com/content/www/us/en/architecture-and-technology/intel-optane-technology.html"><b>Optaine</b></a>, <b>Turbo Boost</b>, <b>Coffee-Lake</b></td>
+          <td><a href="https://ark.intel.com/products/codename/97787/Coffee-Lake">CPU</b></a>: <a>i5-8400</a></td>
+          <td><a href="https://www.intel.com/content/www/us/en/architecture-and-technology/intel-optane-technology.html">Optaine</a>, <b>Turbo Boost</b>, <b>Coffee-Lake</b></td>
         </tr>
       </tbody>
     </table>
 
     <table class="w3-table-all w3-card w3-section">
-      <caption><h3>Laptop</h3></caption>
+      <caption>
+        <h3>Laptop</h3>
+      </caption>
       <thead>
         <tr class="my-color">
-          <th>Component</th>
-          <th>Technology</th>
+          <th>Model</th>
+          <th>Price</th>
+          <th>CPU</th>
+          <th>Weight</th>
+          <th>Battery</th>
+          <th>Memory</th>
+          <th>Storage</th>
+          <th>Display</th>
+          <th>Accessories</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td><a href="https://ark.intel.com/products/codename/97787/Coffee-Lake"><b>CPU</b></a>: <a href="https://www.intel.com/content/www/us/en/products/processors/core/i5-processors/i5-8400.html"><b>i5-8400</b></a></td>
-          <td><a href="https://www.intel.com/content/www/us/en/architecture-and-technology/intel-optane-technology.html"><b>Optaine</b></a>, <b>Turbo Boost</b>, <b>Coffee-Lake</b></td>
+          <td><a>lg-13Z980-UAAW5U1</a></td>
+          <td>1099</td>
+          <td><a>i5-8250U</a></td>
+          <td>2.13</td>
+          <td>22.5</td>
+          <td>8 2400</td>
+          <td>256G</td>
+          <td>13.3 1920 x 1080</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td><a>ZenBook-13-UX331UA</a></td>
+          <td>799</td>
+          <td><a>i5-8250U</a></td>
+          <td>2.5</td>
+          <td>14</td>
+          <td>8 2400</td>
+          <td>256G</td>
+          <td>13.3 1920 x 1080</td>
+          <td></td>
+        </tr>
+        <tr>
+          <td><a href="8ZCNC665SLQ5">Microsoft Surface Pro 6</a></td>
+          <td>899</td>
+          <td><a>i5-8250U</a></td>
+          <td>1.73+0.68</td>
+          <td>13.5</td>
+          <td>8 1866</td>
+          <td>128G</td>
+          <td>12.3 2736 x 1824</td>
+          <td>Keyboard 129; Pen 99</td>
         </tr>
       </tbody>
     </table>
 
     <table class="w3-table-all w3-card w3-section">
-      <caption><h3>Tablet</h3></caption>
+      <caption>
+        <h3>Tablet</h3>
+      </caption>
       <thead>
         <tr class="my-color">
-          <th>Component</th>
-          <th>Technology</th>
+          <th>Model</th>
+          <th>Price</th>
+          <th>CPU</th>
+          <th>Storage</th>
+          <th>RAM</th>
+          <th>Weight</th>
+          <th>Battery</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <td><a href="https://ark.intel.com/products/codename/97787/Coffee-Lake"><b>CPU</b></a>: <a href="https://www.intel.com/content/www/us/en/products/processors/core/i5-processors/i5-8400.html"><b>i5-8400</b></a></td>
-          <td><a href="https://www.intel.com/content/www/us/en/architecture-and-technology/intel-optane-technology.html"><b>Optaine</b></a>, <b>Turbo Boost</b>, <b>Coffee-Lake</b></td>
+          <td><a>ipad-9.7</a></td>
+          <td>429</td>
+          <td><a href="https://en.wikipedia.org/wiki/Apple_A10">A10</a></td>
+          <td>1.03</td>
+          <td>10</td>
+          <td>128</td>
         </tr>
       </tbody>
     </table>
 
+    <table class="w3-table-all w3-card w3-section">
+      <caption>
+        <h3>Cellphone</h3>
+      </caption>
+      <thead>
+        <tr class="my-color">
+          <th>Model</th>
+          <th>Price</th>
+          <th>CPU</th>
+          <th>Storage</th>
+          <th>RAM</th>
+          <th>Battery</th>
+          <th>Display</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td><a>OnePlus/6t</a></td>
+          <td>549</td>
+          <td><a>S845</a></td>
+          <td>128</td>
+          <td>6</td>
+          <td>3700</td>
+          <td>6.4</td>
+        </tr>
+        <tr>
+          <td><a href="https://www.asus.com/us/Phone/ZenFone-5Z-ZS620KL/Tech-Specs/">ZenFone-5Z-ZS620KL</a></td>
+          <td>499</td>
+          <td><a>S845</a></td>          
+          <td>64</td>
+          <td>6</td>
+          <td>3200</td>
+          <td>6.2</td>
+        </tr>
+      </tbody>
+    </table>
   </main>
 
 </body>
