--- a/notes/programming/setup.html
+++ b/notes/programming/setup.html
@@ -9,14 +9,35 @@
 <body>
 
   <main class="w3-container">
-
     <section>
-      <h3>PowerShell</h3>
-      <pre><code class="ps my-code">
-        Set-ExecutionPolicy -ExecutionPolicy Unrestricted -Scope CurrentUser
-      </code></pre>
-    </section>
+      <h1>Setup</h1>
 
+      <section>
+        <h2>Windows</h2>
+
+        <section>
+          <h3>Start</h3>
+          <ol>
+            <li>Setup OneDrive <a href="https://support.office.com/en-us/article/sync-files-with-the-onedrive-sync-client-in-windows-615391c4-2bd3-4aae-a42a-858262e42a49">(Sync files with the OneDrive sync client in Windows)</a></li>
+            <li>Download <code class="ps">Initialize-Windows.ps1</code></li>
+            <li>Run <code class="ps">$env:USERPROFILE\OneDrive\GitHub\powershell\Initialize-Windows.ps1</code></li>
+          </ol>
+        </section>
+        <section>
+          <h3>OneDrive</h3>
+          <p><a href="https://support.office.com/en-us/article/sync-files-with-the-onedrive-sync-client-in-windows-615391c4-2bd3-4aae-a42a-858262e42a49">(Sync files with the OneDrive sync client in Windows)</a></p>
+        </section>
+        <section>
+          <h3>PowerShell</h3>
+          <pre><code class="ps my-code">
+            Set-ExecutionPolicy Unrestricted
+          </code></pre>
+        </section>
+    
+      </section>
+
+    </section>
+    
   </main>
 
 </body>
